NEWS/ChangeLog for hydroGOF
--------------------------
0.4-0  11-Mar-2020
        o Package tested against R Under development (unstable) (2020-03-10 r77920) -- "Unsuffered Consequences", following an imperative request made by CRAN.
        o citation file changed, following CRAN comments.
        o Vignette on Goodness-of-fit Measures to Compare Observed and Simulated Values was moved from Sweave to Knitr.

0.3-9  07-Ago-2017
        o repository management moved from SVN to GIT, including rforge.
        o citation with DOI is now possible (and new CITATION file).
        o 'NSE'         : -) three new arguments (FUN, epsilon, epsilon.value), added to allow pre-processing simulated and observed values (e.g., log, sqrt, 1/x)                                              
        o 'KGE'         : -) now works correctly when 'out.type="full"', even if 'sim' and 'obs' do not have a single element in common (i.e., results in labelled NAs)
        o 'd'           : -) now it returns NA when it is not possible to compute the index of agreement (sum((abs(sim-Om)+abs(obs-Om))^2)=0)
        o 'ggof'        : -) legend and axis fonts are preserved when 'pt.style' is set to bar
                          -) fixed error raised for xts >= 0.10-0
        o 'plot2'       : -) legend and axis fonts are preserved when 'pt.style' is set to bar
                          -) fixed error raised for xts >= 0.10-0
        o 'plotbands    : -) fixed error raised for xts >= 0.10-0
        o 'rNSE'        : -) fixed typo in the formula presented in the documentation (thanks to James Ward!)
        o 'rPearson'    : -) now it is exported in the NASPECE and visible to the users.
        o 'md'          : -) correct small typo in documentation (thanks to Raphael Felber !)
        o 'rSD'         : -) missing values in 'obs' or 'sim' are now removed before the computations (thanks to Colin Hansen !)